--- a/WebGUI/html/widgets/2d_stop-light.html
+++ b/WebGUI/html/widgets/2d_stop-light.html
@@ -29,7 +29,7 @@
 			//init()
 
 			var pv_settings_ = [];
-			var parameters_ = {class: "", "upload_csv_file": "not uploaded", "background_color": "transparent", "table_border": "1px", "table_border_color": "grey"};
+			var parameters_ = {class: "", "upload_csv_file": "not uploaded", "export_csv_file": " ", "background_color": "transparent", "table_border": "1px", "table_border_color": "grey"};
 
 			//define data sample
 			//each cell contain
