Cleaning up printouts at hwdev test stand

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -1144,7 +1144,7 @@
 								str += "Last Configured by FSM: "; 
 								break;
 							case 1:
-								str += "Last Started by FSM: ";
+								str += "Last Run Started by FSM: ";
 								break;
 							case 2:
 								str += "Last Activated Config: ";
@@ -1167,10 +1167,10 @@
 							switch((i/3)|0)
 							{
 							case 0:
-								str += "Last Configured ";
+								str += "Last Configured by FSM ";
 								break;
 							case 1:
-								str += "Last Started ";
+								str += "Last Run Started by FSM ";
 								break;
 							case 2:
 								str += "Last Activated Config ";
